@@ -34,7 +34,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.275 (gritter) 11/6/04
+.\"     Sccsid: @(#)nail.1	2.276 (gritter) 11/6/04
 .\"
 .TH NAIL 1 "11/6/04" "nail 11.15" "User Commands"
 .SH NAME
@@ -1556,6 +1556,9 @@ the effect is the same as invoking the
 .I unset
 command with the remaining part of the variable
 (`\fIunset \fIsave\fR').
+.TP
+.B seen
+Takes a message list and marks all messages as having been read.
 .TP
 .B shell
 (sh) Invokes an interactive version of the shell.
